--- a/portfolio.html
+++ b/portfolio.html
@@ -55,19 +55,19 @@
       <section class="portfolio main">
         <div class="container">
           <ul class="filter-button">
-            <li class="card">
+            <li class="item">
               <button class="button-portfolio" type="button">Все</button>
             </li>
-            <li class="card">
+            <li class="item">
               <button class="button-portfolio" type="button">Веб-сайты</button>
             </li>
-            <li class="card">
+            <li class="item">
               <button class="button-portfolio" type="button">Приложения</button>
             </li>
-            <li class="card">
+            <li class="item">
               <button class="button-portfolio" type="button">Дизайн</button>
             </li>
-            <li class="card">
+            <li class="item">
               <button class="button-portfolio" type="button">Маркетинг</button>
             </li>
           </ul>
